Updated and formatted code

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Starter Code Lesson 04 Challenge 01</title>
     <meta charset="UTF-8" />
+    <title>Starter Code Lesson 04 Challenge 01</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -19,9 +19,9 @@
     <main class="main-content">
       <h1>🐱 A purry fren 🐱</h1>
       <figure class="cat">
-        <img src="img/cat-fren.jpg" />
+        <img src="img/cat-fren.jpg" alt="A cat." />
       </figure>
-      <button class="show-cat">Click here for a surprise!</button>
+      <button type="button" class="show-cat">Click here for a surprise!</button>
     </main>
   </body>
 </html>
